--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <!-- Import Google Icon Font -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-        <title>DESC Simplify Project</title>
+        <title>DESC In Kind Portal</title>
     </head>
 
     <body>
